# WebServer

./: Cargo.toml  config.yaml  readme.md
src/: main.rs
src/router/: mod.rs
src/server_core/: ftp.rs  http.rs  mod.rs
src/server_core/ftp/: mod.rs  status.rs  utils.rs
src/server_utils/: mod.rs
src/shutdown_utils/: mod.rs
