[package]
name = "WebServer"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1.13", features = ["attributes"] }
futures = "0.3.31"
http-body-util = "0.1.2"
hyper = { version = "1.5.2", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["full"] }
tokio = {version="1.42.0", features=["full"]}
yaml-rust = "0.4.5"
